okay. just making more alignment issues

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a:hover {
 }
 
 .home_heading {
-  margin-top: 16vh;
+  margin-top: 20vh;
   width: fit-content;
   font-weight: 500;
   font-size: 6em;
@@ -62,10 +62,10 @@ a:hover {
 }
 
 .intro {
-  padding: 3%;
+  padding: 5%;
   width: fit-content;
-  font-weight: 400;
-  font-size: 1.5em;
+  font-weight: 600;
+  font-size: 1.4em;
   line-height: 1;
   color: #fff;
   text-shadow: 0px 4px 4px #00000040;
@@ -81,7 +81,7 @@ a:hover {
 #main_button {
   padding: 1%;
   width: fit-content;
-  margin-top: 50px;
+  margin-top: 2%;
   background: #61ff00;
   box-shadow: 0px 4px 4px #00000040;
   border-radius: 75px;
@@ -101,5 +101,5 @@ a:hover {
   padding: 40px;
   font-weight: 400;
   font-size: 20px;
-  color: #a9a9a9;
+  color: #fff;
 }
